--- a/style.css
+++ b/style.css
@@ -1,8 +1,12 @@
-#app {
+/* #root {
   font-family: Avenir, Helvetica, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-align: center;
-  color: #2c3e50;
-  margin-top: 60px;
-}
+  padding: 0;
+  margin: 0;
+  background-color: #2d2463;
+  display: flex;
+  height: 750px;
+  justify-content: center; 
+}*/
