--- a/src/styles/settings/colors.css
+++ b/src/styles/settings/colors.css
@@ -4,4 +4,6 @@
     --color-floral-white:#FFFCEE;
     --color-fiery-rose: #F25A70;
     --color-sandstorm: #F5D547;
+    --color-old-silver: #828282;
+    --color-maints: #62C370;
 }
